--- a/sass/media-queries/_media-sm.scss
+++ b/sass/media-queries/_media-sm.scss
@@ -169,12 +169,6 @@
           a {
             span {
               display: none;
-
-              i {
-                display: block;
-                width: 20px;
-                position: relative;
-              }
             }
 
             .status-icon {
